Project

General

Profile

Actions

Bug #16226

closed

rbd-mirror: not propagating deletes for images with snapshots

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If an image has snapshots, the deletion will first need to purge the snapshots before attempting to remove the image. However, since the image is not primary, it is hitting the following error and aborting:

librbd::journal::StandardPolicy: local image not promoted

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16231: jewel: rbd-mirror: not propagating deletes for images with snapshotsResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Description updated (diff)
Actions #2

Updated by Jason Dillaman almost 8 years ago

If refresh is required, the clearing of the journal bit will be refreshed such that journaling is re-enabled. Therefore, you need more than one snapshot on the image to hit this condition.

Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16231: jewel: rbd-mirror: not propagating deletes for images with snapshots added
Actions #6

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF