rbd-mirror: image deleter properly handles multiple snapshots

Fixes: http://tracker.ceph.com/issues/16226
Signed-off-by: Jason Dillaman <dillaman@redhat.com>